second scrollbar fix

--- a/css/style.css
+++ b/css/style.css
@@ -151,5 +151,5 @@ body {
  z-index: 999;
  position: relative;
  display: block;
- /* width: 100%; */
+ width: 100%;
 }
